src/main/java/com/example/backend/common/error/GlobalExceptionHandler.java
package com.example.backend.common.error;

public class GlobalExceptionHandler {
}
